--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,6 +1,6 @@
 doctrine:
     dbal:
-        url: '%env(resolve:DATABASE_URL)%'
+        url: 'mysql://orbys:Mina1707.@127.0.0.1:3306/orbys_db?serverVersion=8.0.32&charset=utf8mb4'
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
@@ -28,7 +28,7 @@ doctrine:
 when@test:
     doctrine:
         dbal:
-            # "TEST_TOKEN" is typically set by ParaTest
+            # POR AHORA NO TENGO TEST
             dbname_suffix: '_test%env(default::TEST_TOKEN)%'
 
 when@prod:
