intento limpiar error

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,4 +3,8 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
- 
+
+
+books_list:
+    path: /books
+    controller: App\Controller\BookController::list
