--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=bbf62c9e2ce6bdf25483e4e23390c422
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://orbys:Mina1707.@127.0.0.1:3306/orbys_db?serverVersion=8.0.32&charset=utf8mb4"
+DATABASE_URL="mysql://usuario:contraseña@localhost@127.0.0.1:3306/orbys_db?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 
